Add lm-sensors to the list of packages

--- a/minipc-setup.yaml
+++ b/minipc-setup.yaml
@@ -44,6 +44,7 @@
         name:
           - ddclient
           - higan
+          - lm-sensors
           - mlocate
           - mpv
           - net-tools
